--- a/style/style.css
+++ b/style/style.css
@@ -8,17 +8,32 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-ul {
-    list-style: none;
+p {
+    margin-bottom: 1.875rem;
+    color: rgba(0,0,0,0.87);
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+}
+main ul {
+    margin-top: .625rem;
 }
 
-li {
-    margin:  0 1.25rem;
-    color: #5F6368;
-    padding: .625rem 0;
-    font-size: .9375rem;
-    font-weight: 500;
-    letter-spacing: 0;
+main ul li{
+    margin-bottom: .625rem;
+    color: rgba(0,0,0,0.87);
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+main h3{
+    color:#3c4043;
+    margin-bottom: .625rem;
+}
+
+.head-bottom ul, .foot-cont ul {
+    list-style: none;
 }
 
 .head-top h2 {
@@ -43,14 +58,25 @@ li {
 .logo {
     padding: .625rem 0;
 }
+
 .head-bottom{
     border-bottom: .0625rem solid #5F6368;
 }
-.nav {
+
+.head-bottom .nav {
     display: flex;
 }
 
-li:last-child {
+.head-bottom li {
+    margin:  0 1.25rem;
+    color: #5F6368;
+    padding: .625rem 0;
+    font-size: .9375rem;
+    font-weight: 500;
+    letter-spacing: 0;
+}
+
+.head-bottom li:last-child {
     color: blue;
     border-bottom: .1875rem solid #3367d6;
 }
@@ -70,4 +96,31 @@ li:last-child {
 
 .container div {
     margin-bottom: 2.5rem;
+}
+
+footer {
+    background-color: #f5f5f5;
+}
+
+.foot-cont {
+    display: flex;
+    width: 60%;
+    margin: 0 auto;
+    padding: .625rem;
+    justify-content: space-between;
+}
+
+.foot-nav {
+    display: flex;
+    align-items: center;
+    
+}
+
+.foot-nav span {
+    margin: 0 .3125rem;
+}
+.foot-nav li a {
+    color: rgba(0,0,0,0.87);
+    font-size: .6875rem;
+    text-decoration: none;
 }
